# can_ia_run

./: .gitignore  HOW_IT_WORKS.md  NORMALIZER_NOTES.md  NOTA_TECNICA.md  NOTA_TECNICA_KODIGO.md  README.md  RESULTS.md  astro.config.mjs  caniarun.sh  package.json  plan_tui_caniarun.md  pnpm-lock.yaml  pyproject.toml  refactor.py  scratch.py  skills-lock.json  test_android_detect.py  test_regression.py  tsconfig.json
.github/workflows/: workflow.yml
data/: eval_clean.json  eval_dirty.json
public/: robots.txt
scripts/: fetch-licenses.ts  fetch-ollama-readmes.ts  scrape-models.ts
src/caniarun/: __main__.py  cli.py  compat.py  gpu_db.py  gpu_specs.py  hardware.py  log_analyzer.py  log_emitter.py  models_backup.py  output.py  share.py
src/caniarun/benchmarklog/: metrics.py  normalizer.py  rules.py  runner.py  validator.py
src/caniarun/gpu_data/: nvidia.py  nvidia_pro.py  other.py
src/caniarun/hardware_detection/: bandwidth.py  detectors.py
src/caniarun/models/: __init__.py  command.py  core.py  deepseek.py  exaone.py  gemma_1.py  gemma_2.py  gemma_3.py  glm.py  gpt_oss.py  kimi.py  lfm.py  llama_1.py  llama_2.py  mistral_1.py  mistral_2.py  olmo.py  (+7 more)
src/components/: Footer.astro  ModelListContent.astro  NavHeader.astro
src/data/: licenses.ts  models.ts  ollama-readmes.json
src/layouts/: Layout.astro
src/lib/: device-slugs.ts  hardware-ui.ts  hardware.ts  og.ts
src/pages/: advertise.astro  compare.astro  docs.astro  index.astro  tier.astro  why.astro
src/styles/: global.css
tests/: test_analyzer.py  test_compat.py  test_hardware.py  test_models.py
(+29 files in other folders)
