[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caniarun"
version = "0.1.1"
description = "A zero-config Python CLI that detects local hardware and prints S–F grades for AI models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
    "textual>=0.82.0"
]

[project.optional-dependencies]
nvidia = ["pynvml>=12.0"]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
caniarun = "caniarun.cli:main"
